log/build_2024-02-15_16-36-53/navigation_core/stderr.log
  File "/home/pioneer-ii/pioneer_ws/install/navigation_core/lib/python3.8/site-packages/navigation_core/waypoint_controller.py", line 111
    if yawTarget < 0
                   ^
SyntaxError: invalid syntax

